# dobble

./: .gitignore  README.md
gui/: CMakeLists.txt
gui/include/: plop.hpp
gui/include/dobble/: card.hpp  deck.hpp  item.hpp
gui/src/: card.cpp  deck.cpp  item.cpp  main.cpp  main_window.cpp  main_window.hpp  plop.cpp
